--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -8,8 +8,8 @@ android {
     defaultConfig {
         minSdkVersion 21
         targetSdkVersion 28
-        versionCode 13
-        versionName "v1.3"
+        versionCode 14
+        versionName "v1.4"
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
@@ -34,29 +34,29 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
-    compileOnly 'androidx.appcompat:appcompat:1.1.0-alpha04'
-    compileOnly 'com.google.android.material:material:1.1.0-alpha05'
-    compileOnly 'androidx.recyclerview:recyclerview:1.1.0-alpha04'
+    api 'androidx.appcompat:appcompat:1.1.0-alpha04'
+    api 'com.google.android.material:material:1.1.0-alpha05'
+    api 'androidx.recyclerview:recyclerview:1.1.0-alpha04'
 
     // if u use AndroidX, use the following
-    compileOnly 'com.blankj:utilcodex:1.23.7'
+    api 'com.blankj:utilcodex:1.23.7'
 
-    compileOnly 'com.google.code.gson:gson:2.8.5'
-    compileOnly 'com.squareup.okio:okio:2.2.2'
-    compileOnly 'com.squareup.okhttp3:okhttp:3.14.0'
-    compileOnly 'com.squareup.okhttp3:logging-interceptor:3.14.0'
+    api 'com.google.code.gson:gson:2.8.5'
+    api 'com.squareup.okio:okio:2.2.2'
+    api 'com.squareup.okhttp3:okhttp:3.14.0'
+    api 'com.squareup.okhttp3:logging-interceptor:3.14.0'
 
-    compileOnly 'com.squareup.retrofit2:retrofit:2.5.0'
-    compileOnly 'io.reactivex.rxjava2:rxjava:2.2.8'
-    compileOnly 'io.reactivex.rxjava2:rxandroid:2.1.1'
-    compileOnly 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
-    compileOnly 'com.squareup.retrofit2:converter-gson:2.5.0'
+    api 'com.squareup.retrofit2:retrofit:2.5.0'
+    api 'io.reactivex.rxjava2:rxjava:2.2.8'
+    api 'io.reactivex.rxjava2:rxandroid:2.1.1'
+    api 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
+    api 'com.squareup.retrofit2:converter-gson:2.5.0'
 
-    compileOnly 'com.facebook.fresco:fresco:1.13.0'
-    compileOnly 'com.facebook.fresco:imagepipeline-okhttp3:1.13.0'
+    api 'com.facebook.fresco:fresco:1.13.0'
+    api 'com.facebook.fresco:imagepipeline-okhttp3:1.13.0'
 
-    compileOnly 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.46'
-    compileOnly 'com.scwang.smartrefresh:SmartRefreshLayout:1.1.0-andx-4'
+    api 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.46'
+    api 'com.scwang.smartrefresh:SmartRefreshLayout:1.1.0-andx-4'
 
-    compileOnly 'com.github.tbruyelle:rxpermissions:0.10.2'
+    api 'com.github.tbruyelle:rxpermissions:0.10.2'
 }
