--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -8,8 +8,8 @@ android {
     defaultConfig {
         minSdkVersion 21
         targetSdkVersion 28
-        versionCode 15
-        versionName "v1.5"
+        versionCode 16
+        versionName "v1.6"
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
@@ -35,6 +35,7 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
     api 'androidx.appcompat:appcompat:1.1.0-alpha04'
+    api 'androidx.constraintlayout:constraintlayout:2.0.0-alpha3'
     api 'com.google.android.material:material:1.1.0-alpha05'
     api 'androidx.recyclerview:recyclerview:1.1.0-alpha04'
 
