--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -8,8 +8,8 @@ android {
     defaultConfig {
         minSdkVersion 21
         targetSdkVersion 28
-        versionCode 16
-        versionName "v1.6"
+        versionCode 12
+        versionName "v1.2"
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
@@ -23,9 +23,10 @@ android {
     }
 
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility '1.8'
+        targetCompatibility '1.8'
     }
+    buildToolsVersion = '28.0.3'
 }
 
 dependencies {
@@ -34,18 +35,16 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
-    api 'androidx.appcompat:appcompat:1.1.0-alpha04'
-    api 'androidx.constraintlayout:constraintlayout:2.0.0-alpha3'
-    api 'com.google.android.material:material:1.1.0-alpha05'
-    api 'androidx.recyclerview:recyclerview:1.1.0-alpha04'
+    api 'androidx.appcompat:appcompat:1.1.0-alpha05'
+    api 'com.google.android.material:material:1.1.0-alpha06'
 
     // if u use AndroidX, use the following
     api 'com.blankj:utilcodex:1.23.7'
 
     api 'com.google.code.gson:gson:2.8.5'
     api 'com.squareup.okio:okio:2.2.2'
-    api 'com.squareup.okhttp3:okhttp:3.14.0'
-    api 'com.squareup.okhttp3:logging-interceptor:3.14.0'
+    api 'com.squareup.okhttp3:okhttp:4.0.0-alpha01'
+    api 'com.squareup.okhttp3:logging-interceptor:4.0.0-alpha01'
 
     api 'com.squareup.retrofit2:retrofit:2.5.0'
     api 'io.reactivex.rxjava2:rxjava:2.2.8'
@@ -55,7 +54,6 @@ dependencies {
 
     api 'com.facebook.fresco:fresco:1.13.0'
     api 'com.facebook.fresco:imagepipeline-okhttp3:1.13.0'
-    api 'com.facebook.fresco.helper:fresco-helper:2.1.8'
 
     api 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.46'
     api 'com.scwang.smartrefresh:SmartRefreshLayout:1.1.0-andx-4'
