--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -53,9 +53,8 @@ dependencies {
     api 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
     api 'com.squareup.retrofit2:converter-gson:2.5.0'
 
-    api 'com.facebook.fresco:fresco:1.13.0'
-    api 'com.facebook.fresco:imagepipeline-okhttp3:1.13.0'
-    api 'com.facebook.fresco.helper:fresco-helper:2.1.8'
+    api 'com.github.bumptech.glide:glide:4.9.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
 
     api 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.46'
     api 'com.scwang.smartrefresh:SmartRefreshLayout:1.1.0-andx-4'
