--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -3,13 +3,14 @@ apply plugin: 'com.github.dcendents.android-maven'
 group='com.github.MycroftWong'
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion 29
+    buildToolsVersion = '29.0.1'
 
     defaultConfig {
         minSdkVersion 21
-        targetSdkVersion 28
-        versionCode 16
-        versionName "v1.6"
+        targetSdkVersion 29
+        versionCode 17
+        versionName "v1.7"
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
@@ -34,30 +35,45 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
-    api 'androidx.appcompat:appcompat:1.1.0-alpha04'
-    api 'androidx.constraintlayout:constraintlayout:2.0.0-alpha3'
-    api 'com.google.android.material:material:1.1.0-alpha05'
-    api 'androidx.recyclerview:recyclerview:1.1.0-alpha04'
+    api 'androidx.appcompat:appcompat:1.1.0-rc01'
+    api 'androidx.constraintlayout:constraintlayout:2.0.0-beta2'
+    api 'com.google.android.material:material:1.1.0-alpha08'
+    api 'androidx.recyclerview:recyclerview:1.1.0-beta01'
 
     // if u use AndroidX, use the following
-    api 'com.blankj:utilcodex:1.23.7'
+    api 'com.blankj:utilcodex:1.24.7'
 
     api 'com.google.code.gson:gson:2.8.5'
     api 'com.squareup.okio:okio:2.2.2'
-    api 'com.squareup.okhttp3:okhttp:3.14.0'
-    api 'com.squareup.okhttp3:logging-interceptor:3.14.0'
+    api 'com.squareup.okhttp3:okhttp:4.0.1'
+    api 'com.squareup.okhttp3:logging-interceptor:4.0.1'
 
-    api 'com.squareup.retrofit2:retrofit:2.5.0'
-    api 'io.reactivex.rxjava2:rxjava:2.2.8'
+    api 'com.squareup.retrofit2:retrofit:2.6.0'
+    api 'io.reactivex.rxjava2:rxjava:2.2.10'
     api 'io.reactivex.rxjava2:rxandroid:2.1.1'
     api 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
-    api 'com.squareup.retrofit2:converter-gson:2.5.0'
+    api 'com.squareup.retrofit2:converter-gson:2.6.0'
 
     api 'com.github.bumptech.glide:glide:4.9.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
+    api 'com.github.bumptech.glide:okhttp3-integration:4.9.0'
+
 
     api 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.46'
-    api 'com.scwang.smartrefresh:SmartRefreshLayout:1.1.0-andx-4'
+    api 'com.scwang.smartrefresh:SmartRefreshLayout:1.1.0-andx-14'
 
     api 'com.github.tbruyelle:rxpermissions:0.10.2'
+
+    // immersion bar
+    api 'com.gyf.immersionbar:immersionbar:3.0.0-beta05'
+
+    api 'com.billy.android:gloading:1.0.1'
+
+    api 'com.github.cxyzy1:clearEditText:1.0.5'
+
+    // pretty time
+    api 'org.ocpsoft.prettytime:prettytime:4.0.1.Final'
+
+    api 'me.dkzwm.widget.fet:core:0.0.8.androidxKT'
+
 }
