--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -51,6 +51,8 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
+    annotationProcessor 'androidx.annotation:annotation:1.1.0'
+
     api 'androidx.appcompat:appcompat:1.1.0-rc01'
     api 'androidx.constraintlayout:constraintlayout:2.0.0-beta2'
     api 'com.google.android.material:material:1.1.0-alpha08'
@@ -72,7 +74,7 @@ dependencies {
 
     api 'com.github.bumptech.glide:glide:4.9.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
-    api 'com.github.bumptech.glide:okhttp3-integration:4.9.0'
+//    api 'com.github.bumptech.glide:okhttp3-integration:4.9.0'
 
     api 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.46'
     api 'com.scwang.smartrefresh:SmartRefreshLayout:1.1.0-andx-14'
