--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,6 +12,13 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        //指定room.schemaLocation生成的文件路径
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments = ["room.schemaLocation": "$projectDir/schemas".toString()]
+            }
+        }
     }
 
     signingConfigs {
@@ -39,6 +46,21 @@ android {
         sourceCompatibility '1.8'
         targetCompatibility '1.8'
     }
+
+    configurations {
+        compile.exclude group: 'io.reactivex.rxjava2', module: 'rxjava'
+        all {
+            resolutionStrategy {
+                eachDependency { DependencyResolveDetails details ->
+                    if (details.requested.group == 'io.reactivex.rxjava3' &&
+                            details.requested.name == 'rxjava') {
+                        details.useVersion '3.0.0-RC1'
+                        details.because 'Unified the version of RxJava3'
+                    }
+                }
+            }
+        }
+    }
 }
 
 dependencies {
@@ -47,9 +69,13 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta2'
     implementation 'androidx.recyclerview:recyclerview:1.1.0-beta01'
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test:runner:1.3.0-alpha02'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.2-alpha02'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0-alpha02'
     implementation project(':lib')
+
+    implementation 'androidx.room:room-runtime:2.2.0-alpha01'
+    implementation 'androidx.room:room-rxjava2:2.2.0-alpha01'
+    annotationProcessor 'android.arch.persistence.room:compiler:2.2.0-alpha01'
 
     // agent web
     implementation 'com.just.agentweb:agentweb:4.0.3-beta@aar'
@@ -63,10 +89,6 @@ dependencies {
     implementation 'com.hjq:titlebar:6.0'
 
     implementation 'com.github.ybq:Android-SpinKit:1.2.0'
-
-    // https://mvnrepository.com/artifact/androidx.lifecycle/lifecycle-viewmodel
-    implementation 'androidx.lifecycle:lifecycle-viewmodel:2.2.0-alpha02'
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0-alpha02'
 
 }
 
