--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -59,6 +59,16 @@
             android:screenOrientation="portrait"
             android:windowSoftInputMode="stateHidden|adjustPan" />
 
+        <service
+            android:name=".service.BackgroundService"
+            android:enabled="true"
+            android:exported="false" >
+            <intent-filter>
+                <action android:name="com.mycroft.sample.add.action" />
+                <action android:name="com.mycroft.sample.delete.action" />
+            </intent-filter>
+        </service>
+
     </application>
 
 </manifest>
