--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -9,8 +9,8 @@ android {
     defaultConfig {
         minSdkVersion 21
         targetSdkVersion 29
-        versionCode 17
-        versionName "v1.7"
+        versionCode 18
+        versionName "v1.8"
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
@@ -24,8 +24,8 @@ android {
     }
 
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility '1.8'
+        targetCompatibility '1.8'
     }
 
     // 强制 rxjava 3.0
@@ -48,8 +48,8 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.2-alpha02'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0-alpha02'
 
     annotationProcessor 'androidx.annotation:annotation:1.1.0'
 
@@ -57,6 +57,15 @@ dependencies {
     api 'androidx.constraintlayout:constraintlayout:2.0.0-beta2'
     api 'com.google.android.material:material:1.1.0-alpha08'
     api 'androidx.recyclerview:recyclerview:1.1.0-beta01'
+
+    api 'androidx.lifecycle:lifecycle-common:2.2.0-alpha02'
+    api 'androidx.lifecycle:lifecycle-common-java8:2.2.0-alpha02'
+    api 'androidx.lifecycle:lifecycle-livedata:2.2.0-alpha02'
+    api 'androidx.lifecycle:lifecycle-livedata-core:2.2.0-alpha02'
+    api 'androidx.lifecycle:lifecycle-runtime:2.2.0-alpha02'
+    api 'androidx.lifecycle:lifecycle-service:2.2.0-alpha02'
+    api 'androidx.lifecycle:lifecycle-viewmodel:2.2.0-alpha02'
+    api 'androidx.lifecycle:lifecycle-extensions:2.2.0-alpha02'
 
     api 'com.blankj:utilcodex:1.24.7'
 
