--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,56 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
+
+    ext {
+        versions = [
+                'gradle': '3.4.2',
+                'minSdkVersion': 21,
+                'targetSdkVersion': 29,
+                'compileSdkVersion': 29,
+                'buildToolsVersion': '29.0.1',
+
+                'jdk': '1.8',
+                'junit': '4.12',
+                'androidjunit': '1.1.2-alpha02',
+                'expresso': '3.3.0-alpha02',
+
+                'annotation': '1.1.0',
+                'appcompat': '1.1.0-rc01',
+                'constraintlayout': '2.0.0-beta2',
+                'material': '1.1.0-alpha08',
+                'recyclerview': '1.1.0-beta01',
+                'lifecycle': '2.2.0-alpha02',
+                'room': '2.2.0-alpha01',
+
+                'androidutilcodex': '1.24.7',
+                'gson': '2.8.5',
+                'okio': '2.2.2',
+                'okhttp': '4.0.1',
+                'retrofit': '2.6.0',
+                'rxjava': '3.0.0-RC1',
+                'rxandroid': '2.1.1',
+                'retrofit2_rxjava2_adapter': '1.0.0',
+                'glide': '4.9.0',
+                'butterknife': '10.1.0',
+
+                'rxpermissions': '0.10.2',
+                'BRAV': '2.9.46',
+                'SmartRefreshLayout': '1.1.0-andx-14',
+                'immersionbar': '3.0.0-beta05',
+
+                'prettytime': '4.0.1.Final',
+                'fet': '0.0.8.androidxKT'
+        ]
+    }
+
     repositories {
         google()
         jcenter()
         
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.4.2'
+        classpath "com.android.tools.build:gradle:${versions.gradle}"
         classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
         classpath 'com.tencent.mm:AndResGuard-gradle-plugin:1.2.16'
 
