--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -3,12 +3,12 @@ apply plugin: 'com.github.dcendents.android-maven'
 group = 'com.github.MycroftWong'
 
 android {
-    compileSdkVersion 29
-    buildToolsVersion = '29.0.1'
+    compileSdkVersion versions.compileSdkVersion
+    buildToolsVersion = versions.buildToolsVersion
 
     defaultConfig {
-        minSdkVersion 21
-        targetSdkVersion 29
+        minSdkVersion versions.minSdkVersion
+        targetSdkVersion versions.targetSdkVersion
         versionCode 18
         versionName "v1.8"
 
@@ -24,8 +24,8 @@ android {
     }
 
     compileOptions {
-        sourceCompatibility '1.8'
-        targetCompatibility '1.8'
+        sourceCompatibility versions.jdk
+        targetCompatibility versions.jdk
     }
 
     // 强制 rxjava 3.0
@@ -47,56 +47,56 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2-alpha02'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0-alpha02'
+    testImplementation "junit:junit:${versions.junit}"
+    androidTestImplementation "androidx.test.ext:junit:${versions.androidjunit}"
+    androidTestImplementation "androidx.test.espresso:espresso-core:${versions.expresso}"
 
-    annotationProcessor 'androidx.annotation:annotation:1.1.0'
+    annotationProcessor "androidx.annotation:annotation:${versions.annotation}"
 
-    api 'androidx.appcompat:appcompat:1.1.0-rc01'
-    api 'androidx.constraintlayout:constraintlayout:2.0.0-beta2'
-    api 'com.google.android.material:material:1.1.0-alpha08'
-    api 'androidx.recyclerview:recyclerview:1.1.0-beta01'
+    api "androidx.appcompat:appcompat:${versions.appcompat}"
+    api "androidx.constraintlayout:constraintlayout:${versions.constraintlayout}"
+    api "com.google.android.material:material:${versions.material}"
+    api "androidx.recyclerview:recyclerview:${versions.recyclerview}"
 
-    api 'androidx.lifecycle:lifecycle-common:2.2.0-alpha02'
-    api 'androidx.lifecycle:lifecycle-common-java8:2.2.0-alpha02'
-    api 'androidx.lifecycle:lifecycle-livedata:2.2.0-alpha02'
-    api 'androidx.lifecycle:lifecycle-livedata-core:2.2.0-alpha02'
-    api 'androidx.lifecycle:lifecycle-runtime:2.2.0-alpha02'
-    api 'androidx.lifecycle:lifecycle-service:2.2.0-alpha02'
-    api 'androidx.lifecycle:lifecycle-viewmodel:2.2.0-alpha02'
-    api 'androidx.lifecycle:lifecycle-extensions:2.2.0-alpha02'
+    api "androidx.lifecycle:lifecycle-common:${versions.lifecycle}"
+    api "androidx.lifecycle:lifecycle-common-java8:${versions.lifecycle}"
+    api "androidx.lifecycle:lifecycle-livedata:${versions.lifecycle}"
+    api "androidx.lifecycle:lifecycle-livedata-core:${versions.lifecycle}"
+    api "androidx.lifecycle:lifecycle-runtime:${versions.lifecycle}"
+    api "androidx.lifecycle:lifecycle-service:${versions.lifecycle}"
+    api "androidx.lifecycle:lifecycle-viewmodel:${versions.lifecycle}"
+    api "androidx.lifecycle:lifecycle-extensions:${versions.lifecycle}"
 
-    api 'com.blankj:utilcodex:1.24.7'
+    api "com.blankj:utilcodex:${versions.androidutilcodex}"
 
-    api 'com.google.code.gson:gson:2.8.5'
-    api 'com.squareup.okio:okio:2.2.2'
-    api 'com.squareup.okhttp3:okhttp:4.0.1'
-    api 'com.squareup.okhttp3:logging-interceptor:4.0.1'
+    api "com.google.code.gson:gson:${versions.gson}"
+    api "com.squareup.okio:okio:${versions.okio}"
+    api "com.squareup.okhttp3:okhttp:${versions.okhttp}"
+    api "com.squareup.okhttp3:logging-interceptor:${versions.okhttp}"
 
-    api 'com.squareup.retrofit2:retrofit:2.6.0'
-    api 'io.reactivex.rxjava3:rxjava:3.0.0-RC1'
-    api 'io.reactivex.rxjava2:rxandroid:2.1.1'
-    api 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
+    api "com.squareup.retrofit2:retrofit:${versions.retrofit}"
+    api "io.reactivex.rxjava3:rxjava:${versions.rxjava}"
+    api "io.reactivex.rxjava2:rxandroid:${versions.rxandroid}"
+    api "com.jakewharton.retrofit:retrofit2-rxjava2-adapter:${versions.retrofit2_rxjava2_adapter}"
 
-    api 'com.squareup.retrofit2:converter-gson:2.6.0'
+    api "com.squareup.retrofit2:converter-gson:${versions.retrofit}"
 
-    api 'com.github.bumptech.glide:glide:4.9.0'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
+    api "com.github.bumptech.glide:glide:${versions.glide}"
+    annotationProcessor "com.github.bumptech.glide:compiler:${versions.glide}"
 //    api 'com.github.bumptech.glide:okhttp3-integration:4.9.0'
 
-    api 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.46'
-    api 'com.scwang.smartrefresh:SmartRefreshLayout:1.1.0-andx-14'
+    api "com.github.CymChad:BaseRecyclerViewAdapterHelper:${versions.BRAV}"
+    api "com.scwang.smartrefresh:SmartRefreshLayout:${versions.SmartRefreshLayout}"
 
-    api 'com.github.tbruyelle:rxpermissions:0.10.2'
+    api "com.github.tbruyelle:rxpermissions:${versions.rxpermissions}"
 
     // immersion bar
-    api 'com.gyf.immersionbar:immersionbar:3.0.0-beta05'
+    api "com.gyf.immersionbar:immersionbar:${versions.immersionbar}"
 
-    api 'com.github.cxyzy1:clearEditText:1.0.5'
+//    api 'com.github.cxyzy1:clearEditText:1.0.5'
 
     // pretty time
-    api 'org.ocpsoft.prettytime:prettytime:4.0.1.Final'
+    api "org.ocpsoft.prettytime:prettytime:${versions.prettytime}"
 
-    api 'me.dkzwm.widget.fet:core:0.0.8.androidxKT'
+    api "me.dkzwm.widget.fet:core:${versions.fet}"
 }
