1. 修改FragmentSwitcher，避免内存泄漏 2. 修改Loading, StatusView逻辑，避免状态未切换 3. 抽象服务类

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,10 +21,12 @@
 
         <meta-data
             android:name="android.max_aspect"
-            android:value="2.4" /> <!-- 适配华为（huawei）刘海屏 -->
+            android:value="2.4" />
+        <!-- 适配华为（huawei）刘海屏 -->
         <meta-data
             android:name="android.notch_support"
-            android:value="true" /> <!-- 适配小米（xiaomi）刘海屏 -->
+            android:value="true" />
+        <!-- 适配小米（xiaomi）刘海屏 -->
         <meta-data
             android:name="notch.config"
             android:value="portrait|landscape" />
@@ -60,11 +62,12 @@
             android:windowSoftInputMode="stateHidden|adjustPan" />
 
         <service
-            android:name=".service.BackgroundService"
+            android:name=".component.BackgroundService"
             android:enabled="true"
-            android:exported="false" >
+            android:exported="false">
             <intent-filter>
                 <action android:name="com.mycroft.sample.add.action" />
+                <action android:name="com.mycroft.sample.clear.action" />
                 <action android:name="com.mycroft.sample.delete.action" />
             </intent-filter>
         </service>
