修改FragmentSwitcher的实现，修复StatusView bug，修改页面bug

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'AndResGuard'
 
 android {
     compileSdkVersion versions.compileSdkVersion
-    buildToolsVersion = "${versions.buildToolsVersion}"
+    buildToolsVersion = versions.buildToolsVersion
 
     defaultConfig {
         applicationId "com.mycroft.sample"
