--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,9 +47,11 @@
             android:name=".activity.MainActivity"
             android:launchMode="singleTask"
             android:screenOrientation="portrait" />
+
         <activity
             android:name=".activity.WebViewActivity"
             android:launchMode="singleTask"
+            android:process=":web"
             android:screenOrientation="portrait" />
         <activity
             android:name=".activity.CategoryDetailActivity"
