--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,12 +21,10 @@
 
         <meta-data
             android:name="android.max_aspect"
-            android:value="2.4" />
-        <!-- 适配华为（huawei）刘海屏 -->
+            android:value="2.4" /> <!-- 适配华为（huawei）刘海屏 -->
         <meta-data
             android:name="android.notch_support"
-            android:value="true" />
-        <!-- 适配小米（xiaomi）刘海屏 -->
+            android:value="true" /> <!-- 适配小米（xiaomi）刘海屏 -->
         <meta-data
             android:name="notch.config"
             android:value="portrait|landscape" />
@@ -47,7 +45,6 @@
             android:name=".activity.MainActivity"
             android:launchMode="singleTask"
             android:screenOrientation="portrait" />
-
         <activity
             android:name=".activity.WebViewActivity"
             android:launchMode="singleTask"
@@ -64,6 +61,12 @@
             android:windowSoftInputMode="stateHidden|adjustPan" />
 
         <service
+            android:name=".component.WebService"
+            android:enabled="true"
+            android:exported="false"
+            android:process=":web" />
+
+        <service
             android:name=".component.BackgroundService"
             android:enabled="true"
             android:exported="false">
@@ -73,7 +76,6 @@
                 <action android:name="com.mycroft.sample.delete.action" />
             </intent-filter>
         </service>
-
     </application>
 
 </manifest>
