--- a/build.gradle
+++ b/build.gradle
@@ -18,16 +18,16 @@ buildscript {
                 'annotation': '1.1.0',
                 'appcompat': '1.1.0-rc01',
                 'constraintlayout': '2.0.0-beta2',
-                'material': '1.1.0-alpha08',
-                'recyclerview': '1.1.0-beta01',
-                'lifecycle': '2.2.0-alpha02',
-                'room': '2.2.0-alpha01',
+                'material': '1.1.0-alpha09',
+                'recyclerview': '1.1.0-beta03',
+                'lifecycle': '2.2.0-alpha03',
+                'room': '2.2.0-alpha02',
 
                 'androidutilcodex': '1.24.7',
                 'gson': '2.8.5',
-                'okio': '2.2.2',
-                'okhttp': '4.0.1',
-                'retrofit': '2.6.0',
+                'okio': '2.3.0',
+                'okhttp': '4.1.0',
+                'retrofit': '2.6.1',
                 'rxjava': '3.0.0-RC1',
                 'rxandroid': '2.1.1',
                 'retrofit2_rxjava2_adapter': '1.0.0',
@@ -36,7 +36,7 @@ buildscript {
 
                 'rxpermissions': '0.10.2',
                 'BRAV': '2.9.46',
-                'SmartRefreshLayout': '1.1.0-andx-14',
+                'SmartRefreshLayout': '1.1.0',
                 'immersionbar': '3.0.0-beta05',
 
                 'prettytime': '4.0.1.Final',
