--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,8 +77,8 @@ dependencies {
 
     implementation "androidx.navigation:navigation-fragment:${versions.navigation}"
     implementation "androidx.navigation:navigation-ui:${versions.navigation}"
-    implementation "androidx.navigation:navigation-fragment-ktx:${versions.navigation}"
     implementation "androidx.navigation:navigation-ui-ktx:${versions.navigation}"
+    implementation "androidx.navigation:navigation-fragment-ktx:${versions.navigation}"
 
     implementation "androidx.room:room-runtime:${versions.room}"
     implementation "androidx.room:room-rxjava2:${versions.room}"
@@ -98,6 +98,8 @@ dependencies {
     implementation 'com.github.ybq:Android-SpinKit:1.2.0'
 
     implementation 'com.blankj:swipe-panel:1.1'
+
+    implementation  'com.scwang.smart:refresh-header-classics:2.0.0-alpha-1'
 }
 
 
