--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ buildscript {
 
     ext {
         versions = [
-                'kotlin_version': '1.3.41',
+                'kotlin_version': '1.3.50',
                 'gradle': '3.5.0',
                 'minSdkVersion': 21,
                 'targetSdkVersion': 28,
@@ -17,18 +17,19 @@ buildscript {
                 'expresso': '3.3.0-alpha02',
 
                 'annotation': '1.1.0',
-                'appcompat': '1.1.0-rc01',
+                'appcompat': '1.1.0',
                 'constraintlayout': '2.0.0-beta2',
-                'material': '1.1.0-alpha09',
-                'recyclerview': '1.1.0-beta03',
-                'lifecycle': '2.2.0-alpha03',
-                'room': '2.2.0-beta01',
-                'navigation': '2.2.0-alpha01',
+                'material': '1.1.0-alpha10',
+                'recyclerview': '1.1.0-beta04',
+                'lifecycle': '2.2.0-alpha04',
+                'room': '2.2.0-rc01',
+                'navigation': '2.2.0-alpha02',
+                'navigation_ktx': '1.0.0',
 
-                'androidutilcodex': '1.24.7',
+                'androidutilcodex': '1.25.9',
                 'gson': '2.8.5',
-                'okio': '2.3.0',
-                'okhttp': '4.1.0',
+                'okio': '2.4.0',
+                'okhttp': '4.1.1',
                 'retrofit': '2.6.1',
                 'rxjava': '3.0.0-RC1',
                 'rxandroid': '2.1.1',
@@ -48,14 +49,16 @@ buildscript {
 
     repositories {
         google()
-        jcenter()
-        
+//        jcenter()
+        // 添加阿里云 maven 地址
+        maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
+        maven { url 'http://maven.aliyun.com/nexus/content/repositories/jcenter' }
     }
     dependencies {
         classpath "com.android.tools.build:gradle:${versions.gradle}"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:${versions.kotlin_version}"
         classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
-        classpath 'com.tencent.mm:AndResGuard-gradle-plugin:1.2.16'
+        classpath 'com.tencent.mm:AndResGuard-gradle-plugin:1.2.17'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -65,8 +68,11 @@ buildscript {
 allprojects {
     repositories {
         google()
-        jcenter()
+//        jcenter()
         maven { url "https://jitpack.io" }
+        // 添加阿里云 maven 地址
+        maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
+        maven { url 'http://maven.aliyun.com/nexus/content/repositories/jcenter' }
     }
 }
 
